# Unity-Open-MCP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  README.zh-CN.md  package.json
.github/: pull_request_template.md
benchmarks/: README.md
demo/: .gitignore  AGENTS.md  README.md
docs/: README.md  api.md  architecture.md  code-conventions.md  development-setup.md  dialog-policy.md  extensions.md  manual-setup.md  mcp-tools-comparison.md  skills.md  tools.md  troubleshooting-contributors.md  troubleshooting.md  unity-hub-pro.md  unity-version-compat.md  versioning.md  wizard-setup.md
docs/api/: mcp-tools.md  (+5 more)
hub/: AGENTS.md  MANUAL_VALIDATION.md  README.md  package-lock.json  package.json
hub/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
hub/src-tauri/capabilities/: default.json
hub/src-tauri/src/: lib.rs  main.rs
hub/src-tauri/src/config/: ai_toolkit.rs  bridge_port.rs  build_target.rs  clear.rs  cli.rs  command_runner.rs  commands.rs  constants.rs  diagnostics.rs  discovery.rs  env_vars.rs  git_branch.rs  git_status.rs  hub_install.rs  launch.rs  launch_log.rs  launch_verify.rs  line_count.rs  logs.rs  mcp_config.rs  mod.rs  new_project.rs  paths.rs  persistence.rs  process.rs  project_kind.rs  projects.rs  releases.rs  render_pipeline.rs  running_unity.rs  schemas.rs  seed.rs  sizes.rs  upgrade.rs  walk_up_scan.rs  wizard.rs
hub/src-tauri/src/config/upm/: changelog.rs  create.rs  manifest.rs  meta.rs  migrate.rs  mod.rs
hub/src-tauri/tests/fixtures/: archive_page.html
mcp-server/: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
scripts/: AGENTS.md  README.md  gen-mcp-coverage-matrix.mjs  generate-token-estimates.mjs  mcp-behavior.mjs  mcp-extensions.mjs  mcp-full-test.mjs  mcp-headless.mjs  mcp-protocol.mjs  mcp-sandbox.mjs  mcp-smoke.mjs  mcp-test-lib.mjs  sync-version.mjs
skills/: AGENTS.md  client-paths.json  client-paths.schema.json
specs/: changelog.md
validation-suite/src-tauri/: Cargo.toml  tauri.conf.json
validation-suite/src-tauri/capabilities/: default.json
validation-suite/src-tauri/icons/: icon.icns
validation-suite/src-tauri/src/: commands.rs  export_store.rs  fs_ops.rs  lib.rs  main.rs  manifest_store.rs  mcp_runner.rs  paths.rs  persistence.rs  profile_loader.rs  project_kind.rs  sandbox.rs  scenario_loader.rs  schemas.rs
(+655 files in other folders)
