[package]
name = "hub"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
libc = "0.2"
# Blocking HTTP client used to fetch the Unity releases feed.
# Matches the spawn_blocking pattern already used in hub_install.rs.
ureq = { version = "2", features = ["tls"], default-features = false }
# SHA-256 for per-project bridge port derivation (hub/src-tauri/src/config/
# bridge_port.rs). Mirrors the bridge (C#) and MCP server (TS) port formulas.
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

