[package]
name = "validation-suite"
version = "0.1.0"
description = "Validation Suite — guided milestone validation runner"
authors = ["Unity AI Hub"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a lib/bin name collision on Windows
# (https://github.com/rust-lang/cargo/issues/8519). Mirrors the Hub crate.
name = "validation_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
